flaskr/static/style.css
/* ... */
::selection {
    background: var(--color-select-bg);
    color: var(--color-select-txt);
    -webkit-text-fill-color: var(--color-select-txt);
    text-shadow: none;
}



/* Layout */

html {
    margin: 0;
    height: 100%;
    min-height: 100%;
}

body {
    margin: 0;
    height: 100%;
    min-height: 100%;
    overflow: hidden;
    font-family: var(--font-body-ltn);
    background-color: var(--color-bg-body-light);
    font-size: 0.9rem;

    display: flex;
    flex-direction: column;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-head-ltn);
    line-height: 1.5em;
    font-weight: 700;
}

h5, h6 {
    line-height: 1.2em;
}

div {
    line-height: 1.2em;
}

h1[lang="ja"], h2[lang="ja"], h3[lang="ja"], h4[lang="ja"], h5[lang="ja"], h6[lang="ja"] {
    font-family: var(--font-head-jpn);
}

.font-ja, .font-jpn, [lang="ja"] {
    font-family: var(--font-body-jpn);
}

.font-en, .font-tj, .font-ltn {
    font-family: var(--font-body-ltn);
}

.hide {
    visibility: hidden;
    display: none;
}

h1 {
    margin-block-start: 0.33em;
    margin-block-end: 0.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-size: 2.75em;
}



/* Footer */

#footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    user-select: none;
    padding-left: 15px;
    padding-bottom: 10px;
    padding-top: 10px;
    font-size: 0;
}

.footer-icon {
    cursor: pointer;
    user-select: none;
    padding: 0px 2px;
    display: inline-block;
    transition: transform 0.1s;
}

.footer-icon-container-offscreen {
    z-index: -1;
}

.footer-icon-offscreen {
    transform: translateY(36px);
    z-index: -1;
}

.offcanvas-footer-menu {
    --bs-offcanvas-height: auto;
    width: 180px;
    left: 18px !important;

    --bs-offcanvas-border-width: 2px;
    --bs-offcanvas-border-color: black;
    border: 2px solid black;
    border-bottom: none;
    outline: 1px solid black;
    outline-offset: 1.5px;
}



/* Scrollbar */

/* width */
::-webkit-scrollbar {
    width: var(--scrollbar-width);
}

/* Track */
::-webkit-scrollbar-track {
    margin-top: 1px;
    background: #f1f1f1;
    border-left: 2px solid var(--header-outline-color);
    border-right: 2px solid var(--header-outline-color);
    border-top:  1px solid var(--header-outline-color);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: var(--header-outline-color);
    outline: 1px solid white;
    outline-offset: -3px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: var(--color-secondary-2);
}



/* Links */

a {
    color: inherit;
    text-decoration: inherit;
}



/* Logo */

.my-logo {
    position: relative;
    z-index: 10;
    font-family: var(--font-head-ltn);

    margin-block-start: 0;
    margin-block-end:   0;

    width: fit-content;
    background: linear-gradient(
        0deg,
        var(--color-secondary-1) 0%,
        var(--color-secondary-3) 30%,
        black 40%,
        var(--color-primary-3) 50%,
        var(--color-primary-1) 100%
    );
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

    text-decoration: underline;
    text-decoration-thickness: var(--logo-line-thickness);
    text-underline-offset: 0.1em;
    text-decoration-color: var(--color-secondary);

    transform: translateY(-0.08em);
}

.my-logo::before {
    content: "v";
    position: absolute;
    z-index: -1;
    top: 0.4em;
    border-top: var(--logo-line-thickness) solid var(--color-primary);
}

.my-logo::after {
    content: "ɒgrɒssɒ";
    position: absolute;
    z-index: -1;
    top: 0.4em;
    right: 0;
    border-top: var(--logo-line-thickness) solid var(--color-primary);
}



/* Double Underline */

.double-underline {
    display: inline-block;
    position: relative;
    color: var(--color-primary);
    text-decoration: underline;
    text-decoration-thickness: 1.5px;
    text-underline-offset: 2.5px;
}

.double-underline::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    padding-bottom: 1px;
    border-bottom: 1px solid var(--color-primary);
}

.underline-hover-text {
    z-index: 10;
    width: fit-content;
    position: relative;
    text-shadow:
        -1px -1px 0 var(--color-bg-body-light),
         1px -1px 0 var(--color-bg-body-light),
        -1px  1px 0 var(--color-bg-body-light),
         1px  1px 0 var(--color-bg-body-light);
}

/* TODO: To allow underline color to be overwritten, need to define underline-inner and underline-outer here */
.underline-hover {
    border-top:    var(--underline-inner);
    border-bottom: var(--underline-outer);
    height:        var(--underline-space);
    width: 100%;
    transition: transform 0.1s;
    transform: translate(0%, var(--underline-offset)) scaleX(0);
    z-index: -10;
    position: absolute;
    box-sizing: content-box;
}

.underline-hover-text:hover {
    color: var(--underline-color);
}

.underline-hover-text:hover .underline-hover {
    transform: translate(0%, var(--underline-offset)) scaleX(1);
}



/* Header */

.header-button {
    transition: color 0.1s, transform 0.1s;
    cursor: pointer;
    transform: translateY(2px);
    font-family: var(--font-body-ltn);
}

.header-button > a {
    color: inherit;
    text-decoration: inherit;
}

.header-button:hover {
    color: var(--color-primary);
    transform: scale(1.1) translateY(2px);
    font-weight: bold;
}

.header-button-underline {
    border-top: 1.5px solid var(--color-primary);
    border-bottom: 0.75px solid var(--color-primary);
    height: 2.75px;
    width: 100%;
    transition: transform 0.1s;
    transform: translateX(0%) translateY(-1.5px) scaleX(0);
}

.header-button:hover .header-button-underline {
    transform: translateX(0%) translateY(-1.5px) scaleX(1);
}


.header-separator {
    margin: 0px 25px;
    cursor: default;
    color: var(--color-secondary-4);
    user-select: none;
}
/* ... */

